[package]
name = "sravz"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
tonic = "0.10.2"
prost = "0.12.1"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
tonic-reflection = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = "1"