[package]
name = "sravz"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio-nsq = "0.14.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
gethostname = "0.4.3"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
crypto = "0.5.1"
digest = "0.10.7"
sha2 = "0.10.8"
serde_derive = "1.0.189"
log = "0.4.5"
serde_json = "1.0"
env_logger = "0.10.1"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"